# unga79

./: .gitignore  Pipfile  README.md  pyproject.toml
app/: app.py  countries.db
notebooks/diego/: 01_data_collection.ipynb  02_llm.ipynb  04_yoda_audios.ipynb
src/unga79/: config.py  data_collection.py  database.py
